--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -58,11 +58,11 @@
                 </AnchorPane>
             </content>
         </Tab>
-        <Tab fx:id="totalView" disable="true" text="Итоговая">
+        <Tab fx:id="totalView" disable="true" text="Итоговая" onSelectionChanged="#total">
             <content>
                 <FlowPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="totalTableView" layoutX="54.0" layoutY="50.0" prefHeight="300.0" prefWidth="1000.0">
+                        <TableView fx:id="totalTableView" layoutX="54.0" layoutY="50.0" prefHeight="500.0" prefWidth="1000.0">
                             <columns>
                                 <TableColumn fx:id="colCategoryNameTotal" prefWidth="180.0" text="Наименование категории" />
                                 <TableColumn fx:id="colPriceOrderTotal" prefWidth="130.0" text="Порядок цен, руб." />
@@ -1023,7 +1023,7 @@
                                 </TitledPane>
             </VBox>
     </Tab>
-        <Tab fx:id="statisticsView" disable="true" text="Статистика" onSelectionChanged="#www">
+        <Tab fx:id="statisticsView" disable="true" text="Статистика" onSelectionChanged="#statistics">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
