--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -169,21 +169,22 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="datePaymentTableView" editable="true"  layoutY="100.0" prefHeight="200.0" prefWidth="200.0">
+                        <TableView fx:id="datePaymentTableView" onMouseMoved="#calcTitleDatePayment" editable="true" layoutY="100.0" prefHeight="200.0" prefWidth="200.0">
                             <columns>
                                 <TableColumn fx:id="colDateDatePayment" prefWidth="100.0" text="Дата" />
                                 <TableColumn fx:id="colPaymentDatePayment" prefWidth="100.0" text="Оплачено" />
                             </columns>
                         </TableView>
-                        <TableView fx:id="AKTableView" editable="true"  prefHeight="58.0" prefWidth="406.0" onMouseMoved="#calcTitleAK">
+                        <TableView fx:id="AKTableView" editable="true" onMouseMoved="#calcTitleAK" prefHeight="56.0" prefWidth="406.0">
                             <columns>
                                 <TableColumn fx:id="colRateAK" prefWidth="110.0" text="Ставка за месяц" />
                                 <TableColumn fx:id="colTermAK" prefWidth="145.0" text="Плановый срок(мес.)" />
-                                <TableColumn fx:id="colCostAK" prefWidth="135.0" text="Стоимость плановая" editable="false" />
+                                <TableColumn fx:id="colCostAK" editable="false" prefWidth="135.0" text="Стоимость плановая" />
                             </columns>
                         </TableView>
-                  <Button fx:id="addRate" layoutX="406.0"  mnemonicParsing="false" text="Добавить" onAction="#On_tabCalculatorClickedActionAK" />
-                  <Button fx:id="addDatePayment" layoutX="300.0" layoutY="129.0" mnemonicParsing="false" text="+" onAction="#On_tabCalculatorClickedActionDatePayment" />
+                  <Button fx:id="addRate" layoutX="406.0" mnemonicParsing="false" onAction="#On_tabCalculatorClickedActionAK" text="Добавить" />
+                  <Button fx:id="addDatePayment" layoutX="200.0" layoutY="100.0" mnemonicParsing="false" onAction="#On_tabCalculatorClickedActionDatePayment" text="+" />
+                  <Button fx:id="deleteDatePayment" layoutX="199.0" onAction="#deleteElementDatePayment" layoutY="125.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="-" />
                     </children>
                 </AnchorPane>
             </content>
