--- a/src/sample/EditProject.fxml
+++ b/src/sample/EditProject.fxml
@@ -81,7 +81,7 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView layoutX="14.0" layoutY="25.0" prefHeight="53.0" prefWidth="687.0">
+                        <TableView prefHeight="53.0" prefWidth="687.0">
                             <columns>
                                 <TableColumn prefWidth="161.0" text="Площадь помещения" />
                                 <TableColumn prefWidth="89.0" text="Ставка" />
@@ -90,7 +90,7 @@
                                 <TableColumn prefWidth="158.0" text="Стоимость со скидкой" />
                             </columns>
                         </TableView>
-                        <TableView layoutX="14.0" layoutY="100.0" prefHeight="154.0" prefWidth="738.0">
+                        <TableView layoutY="100.0" prefHeight="150.0" prefWidth="738.0">
                             <columns>
                                 <TableColumn prefWidth="159.0" text="Этап проекта" />
                                 <TableColumn prefWidth="123.0" text="\% от общей суммы" />
@@ -100,7 +100,7 @@
                                 <TableColumn prefWidth="77.0" text="Остаток" />
                             </columns>
                         </TableView>
-                        <TableView layoutX="14.0" layoutY="268.0" prefHeight="154.0" prefWidth="738.0">
+                        <TableView layoutY="250.0" prefHeight="150.0" prefWidth="738.0">
                             <columns>
                                 <TableColumn prefWidth="159.0" text="Доп. соглашения" />
                                 <TableColumn prefWidth="123.0" />
@@ -1030,11 +1030,12 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="statisticTableView" prefHeight="338.0" prefWidth="536.0">
+                        <TableView fx:id="statisticTableView" prefHeight="338.0" prefWidth="560.0">
                             <columns>
                                 <TableColumn fx:id="colNameCategory" prefWidth="175.0" sortable="false" text="Наименование категории" />
                                 <TableColumn fx:id="colTotalCost" prefWidth="175.0" sortable="false" text="Общая стоимость" />
                                 <TableColumn fx:id="colCostSGM" prefWidth="175.0" sortable="false" text="Стоимость за кв.м." />
+                                <TableColumn fx:id="colActiveStatistic" sortable="false" prefWidth="25.0"  />
                             </columns>
                         </TableView>
                     </children>
