--- a/src/view/EditProject.fxml
+++ b/src/view/EditProject.fxml
@@ -81,7 +81,7 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView prefHeight="53.0" prefWidth="687.0">
+                        <TableView fx:id="DPTableView" prefHeight="53.0" prefWidth="687.0">
                             <columns>
                                 <TableColumn fx:id="colAreaRoomDP" prefWidth="161.0" text="Площадь помещения" />
                                 <TableColumn fx:id="colRateDP" prefWidth="89.0" text="Ставка" />
@@ -118,21 +118,23 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView layoutX="14.0" layoutY="14.0" prefHeight="74.0" prefWidth="360.0">
+                        <TableView fx:id="categoryBuildersTableView" prefHeight="74.0" prefWidth="360.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="Категория" />
-                                <TableColumn prefWidth="144.0" text="Строительные работы" />
-                                <TableColumn minWidth="9.0" prefWidth="140.0" text="Черновые материалы" />
+                                <TableColumn fx:id="colCategoryBuildersCategory" prefWidth="75.0" text="Категория" />
+                                <TableColumn fx:id="colConstructionWorksBuildersCategory" prefWidth="144.0" text="Строительные работы" />
+                                <TableColumn fx:id="colDraftMaterialBuildersCategory" minWidth="9.0" prefWidth="140.0" text="Черновые материалы" />
                             </columns>
                         </TableView>
-                        <TableView layoutX="14.0" layoutY="110.0" prefHeight="74.0" prefWidth="574.0">
+                        <TableView fx:id="stageBuildersTableView" editable="true" onMouseMoved="#calcTitleBuildersStage" layoutY="110.0" prefHeight="170.0" prefWidth="574.0" >
                             <columns>
-                                <TableColumn prefWidth="75.0" text="Дата" />
-                                <TableColumn prefWidth="144.0" text="Оплата работы, руб." />
-                                <TableColumn minWidth="9.0" prefWidth="219.0" text="Оплата черновых материалов, руб." />
-                                <TableColumn minWidth="9.0" prefWidth="135.0" text="Примечание" />
+                                <TableColumn fx:id="colDateBuildersStage" prefWidth="120.0" text="Дата" />
+                                <TableColumn fx:id="colPaymentWorkBuildersStage" prefWidth="144.0" text="Оплата работы, руб." />
+                                <TableColumn fx:id="colPaymentDraftMaterialBuildersStage" minWidth="9.0" prefWidth="174.0" text="Оплата черновых материалов, руб." />
+                                <TableColumn fx:id="colNoteBuildersStage" minWidth="9.0" prefWidth="135.0" text="Примечание" />
                             </columns>
                         </TableView>
+                  <Button layoutX="574.0" onAction="#On_tabCalculatorClickedActionBuildersStage" layoutY="110.0" mnemonicParsing="false" text="+" />
+                  <Button layoutX="573.0" layoutY="135.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="-" />
                     </children>
                 </AnchorPane>
             </content>
@@ -169,7 +171,7 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="datePaymentTableView" onMouseMoved="#calcTitleDatePayment" editable="true" layoutY="100.0" prefHeight="200.0" prefWidth="200.0">
+                        <TableView fx:id="datePaymentTableView" editable="true" layoutY="100.0" onMouseMoved="#calcTitleDatePayment" prefHeight="200.0" prefWidth="200.0">
                             <columns>
                                 <TableColumn fx:id="colDateDatePayment" prefWidth="100.0" text="Дата" />
                                 <TableColumn fx:id="colPaymentDatePayment" prefWidth="100.0" text="Оплачено" />
@@ -184,7 +186,7 @@
                         </TableView>
                   <Button fx:id="addRate" layoutX="406.0" mnemonicParsing="false" onAction="#On_tabCalculatorClickedActionAK" text="Добавить" />
                   <Button fx:id="addDatePayment" layoutX="200.0" layoutY="100.0" mnemonicParsing="false" onAction="#On_tabCalculatorClickedActionDatePayment" text="+" />
-                  <Button fx:id="deleteDatePayment" layoutX="199.0" onAction="#deleteElementDatePayment" layoutY="125.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="26.0" text="-" />
+                  <Button fx:id="deleteDatePayment" layoutX="199.0" layoutY="125.0" mnemonicParsing="false" onAction="#deleteElementDatePayment" prefHeight="25.0" prefWidth="26.0" text="-" />
                     </children>
                 </AnchorPane>
             </content>
@@ -1035,7 +1037,7 @@
                                 <TableColumn fx:id="colNameCategory" prefWidth="175.0" sortable="false" text="Наименование категории" />
                                 <TableColumn fx:id="colTotalCost" prefWidth="175.0" sortable="false" text="Общая стоимость" />
                                 <TableColumn fx:id="colCostSGM" prefWidth="175.0" sortable="false" text="Стоимость за кв.м." />
-                                <TableColumn fx:id="colActiveStatistic" sortable="false" prefWidth="25.0"  />
+                                <TableColumn fx:id="colActiveStatistic" prefWidth="25.0" sortable="false" />
                             </columns>
                         </TableView>
                     </children>
