--- a/src/view/EditProject.fxml
+++ b/src/view/EditProject.fxml
@@ -118,7 +118,7 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <TableView fx:id="categoryBuildersTableView" prefHeight="74.0" prefWidth="360.0">
+                        <TableView fx:id="categoryBuildersTableView" onMouseMoved="#calcTitleBuildersCategory" prefHeight="74.0" prefWidth="360.0">
                             <columns>
                                 <TableColumn fx:id="colCategoryBuildersCategory" prefWidth="75.0" text="Категория" />
                                 <TableColumn fx:id="colConstructionWorksBuildersCategory" prefWidth="144.0" text="Строительные работы" />
